--- a/styles/main.css
+++ b/styles/main.css
@@ -64,12 +64,6 @@ nav {
   float: right;
 }
 
-header ul li {
-  list-style: none;
-  float: left;
-  cursor: pointer;
-}
-
 .clear {
   clear: both;
 }
@@ -92,6 +86,14 @@ header nav ul li {
   margin: 1rem 0 0 6rem;
   position: relative;
   padding-bottom: 5px;
+  list-style: none;
+  float: left;
+  cursor: pointer;
+  transition: var(--transition-duration);
+}
+
+header nav ul li:hover {
+  color: var(--primary-color);
 }
 
 header nav ul li::after {
@@ -260,6 +262,13 @@ header nav ul li a.btn:hover {
   box-shadow: 0 5px 40px -20px black;
   cursor: pointer;
   transition: var(--transition-duration);
+}
+
+.news .news-cards .news-card svg {
+  width: 0.8rem;
+  height: 0.8rem;
+  margin-right: 0.5rem;
+  float: left;
 }
 
 .news .news-cards .news-card:hover {
