dark and light mode

--- a/styles/main.css
+++ b/styles/main.css
@@ -83,13 +83,17 @@ header .logo {
 }
 
 header nav ul li {
-  margin: 1rem 0 0 6rem;
+  margin: 1rem 0 0 3.5rem;
   position: relative;
   padding-bottom: 5px;
   list-style: none;
   float: left;
   cursor: pointer;
   transition: var(--transition-duration);
+}
+
+header nav ul li.active {
+  color: var(--secondary-color);
 }
 
 header nav ul li:hover {
@@ -100,7 +104,7 @@ header nav ul li::after {
   content: "";
   position: absolute;
   bottom: 0;
-  left: 0;
+  left: 0%;
   width: 0%;
   height: 2px;
   background-color: var(--primary-color);
@@ -211,6 +215,7 @@ header nav ul li a.btn:hover {
 .services .services-cards .services-card:hover {
   box-shadow: 0 0 37px -26px black;
   border-color: rgba(211, 211, 211, 0.6);
+  transform: translateY(-10px);
 }
 
 .services .services-cards .services-card .card-img {
@@ -227,6 +232,7 @@ header nav ul li a.btn:hover {
 
 .services .services-cards .services-card .card-info h3 {
   margin-bottom: 0.625rem;
+  color: black;
 }
 
 .services .services-cards .services-card .card-info p {
@@ -256,7 +262,6 @@ header nav ul li a.btn:hover {
   float: left;
   margin-left: 3rem;
   margin-top: 2rem;
-  background-color: white;
   padding-bottom: 2rem;
   border-radius: 10px;
   box-shadow: 0 5px 40px -20px black;
@@ -280,7 +285,6 @@ header nav ul li a.btn:hover {
 }
 
 .news .news-cards .news-card .card-info p {
-  color: gray;
   font-size: 0.75rem;
   margin: 1rem 0;
 }
@@ -465,6 +469,10 @@ footer ul li:last-child {
 @media screen and (min-width: 1920px) {
   .services .services-cards .services-card {
     width: 500px;
+  }
+
+  header nav ul li {
+    margin-left: 6rem;
   }
 
   footer .middle-side,
