--- a/styles/main.css
+++ b/styles/main.css
@@ -202,19 +202,19 @@ header nav ul li a.btn:hover {
 .services .services-cards .services-card {
   float: left;
   width: 350px;
-  min-height: 225px;
+  min-height: 260px;
   padding: 1rem;
   margin: 1.5rem 0 1.5rem 2.5%;
   transition: var(--transition-duration);
   background-color: white;
   border-radius: 10px;
-  border: 2px solid transparent;
+  border: 3px solid transparent;
   cursor: pointer;
 }
 
 .services .services-cards .services-card:hover {
   box-shadow: 0 0 37px -26px black;
-  border-color: rgba(211, 211, 211, 0.6);
+  border-color: rgba(211, 211, 211, 0.7);
   transform: translateY(-10px);
 }
 
@@ -241,7 +241,7 @@ header nav ul li a.btn:hover {
 }
 
 .services .services-cards .services-card .card-info button {
-  margin-top: 0.625rem;
+  margin-top: 1rem;
 }
 
 .services .services-cards .services-card.fourth-card {
@@ -464,15 +464,20 @@ footer ul li:last-child {
   padding-top: 1rem;
 }
 /* End Footer Styles */
+
 /*TODO Media Queries */
 /** 1920px (Large Screens) */
 @media screen and (min-width: 1920px) {
+  header nav ul li {
+    margin-left: 6rem;
+  }
+
   .services .services-cards .services-card {
     width: 500px;
   }
 
-  header nav ul li {
-    margin-left: 6rem;
+  .services .services-cards .services-card .card-info button {
+    margin-top: 2.325rem;
   }
 
   footer .middle-side,
